--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -745,49 +745,7 @@
 							float: right;
 							margin-right: 10px;
 							cursor: pointer;
-							.like {
-							    display: inline-block;
-							    height: 43px;
-							    line-height: 43px;
-							
-								.like-icon {
-								    display: inline-block;
-								    width: 19px;
-								    height: 17px;
-								    background-position: -96px -46px  !important;
-								    cursor: pointer;
-								    vertical-align: middle;
-								}								
-								.like-icon-one {
-								    display: inline-block;
-								    width: 19px;
-								    height: 17px;
-								    background-position: -66px -46px !important;
-								    cursor: pointer;
-								    vertical-align: middle;
-								}								
-								.like-icon-two {
-								    display: inline-block;
-								    width: 19px;
-								    height: 17px;
-								    background-position: -37px -46px !important;
-								    cursor: pointer;
-								    vertical-align: middle;
-								}								
-								.like-icon-three {
-								    display: inline-block;
-								    width: 19px;
-								    height: 17px;
-								    background-position: -7px -46px  !important;
-								    cursor: pointer;
-								    vertical-align: middle;
-								}
-								.like-count {
-								    color: #c4c4c4;
-									font-size: 12px;
-									line-height: 47px;
-								}
-							}
+
 						
 							.comment {
 								margin-left: 10px;
@@ -915,6 +873,9 @@
 						white-space: nowrap;
 					}
 					.fold-function {
+						.like-actionbar  {
+							float: left;
+						}
 						.fold-comments {
 							float: left;
 							width: 53px;
@@ -1031,6 +992,9 @@
 								}
 							}
 							.fold-function {
+								.like-actionbar  {
+									float: left;
+								}
 								.fold-comments {
 									float: left;
 									width: 53px;
@@ -1077,13 +1041,6 @@
 										line-height: 29px;
 									}
 								}
-								.liked {
-									background: #FFEF00 !important;
-									.praise-icon {
-									    background-position: -118px -5px !important;
-									}
-								}
-
 							}
 						}
 					}
