--- a/public/src/app/templates/channel/ChannelWorksView.html
+++ b/public/src/app/templates/channel/ChannelWorksView.html
@@ -45,7 +45,7 @@
 			<var class="nav-bottom"></var>
 		</div>
 		<div class="reply-section-icon">
-			<span class="like super-like" data-type="<%= type %>" data-id="<%= id %>" data-love="<%= love_count %>">
+			<span class="love-like super-like" data-type="<%= type %>" data-id="<%= id %>" data-love="<%= love_count %>">
 			 	<i class="like-icon bg-sprite-rebirth <%= (love_count == 1)? 'like-icon-one': '' %><%= (love_count == 2)? 'like-icon-two': '' %><%= (love_count == 3)? 'like-icon-three': '' %>"></i>
 			 	<em class="like-count"><%= up_count %></em>
 			</span>
