--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -1004,6 +1004,10 @@
 									background-color: #EDEDED;
 									border-radius: 3px;
 									cursor: pointer;
+
+									.like-actionbar  {
+										
+									}
 									.comments-icon {
 										float: left;
 										width: 28px;
