--- a/public/src/less/common.less
+++ b/public/src/less/common.less
@@ -118,6 +118,7 @@ textarea {
         -webkit-border-radius: 2px;
         border-radius: 2px;
         cursor: pointer;
+            background: #EDEDED;
     }
     .like-count {
         color: #fff;
@@ -137,6 +138,7 @@ textarea {
     line-height: 43px;
         height: 0px;
     line-height: 0px;
+
     .like-icon {
         display: inline-block;
         width: 17px;
