--- a/public/src/app/templates/channel/ChannelWorksView.html
+++ b/public/src/app/templates/channel/ChannelWorksView.html
@@ -11,7 +11,7 @@
 			</a>
 		</span>
 		<span class="reply-create-time">
-			<%  var timeMatrixing = time(1449714045); %><%= timeMatrixing %>
+			<%  var timeMatrixing = time(create_time); %><%= timeMatrixing %>
 		</span>
 	</div>
 	
