--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -236,6 +236,7 @@
 		position: relative;
     	display: block;
       	height: 260px;
+      	padding-right: 280px;
 		img {  
 			display: block;
 			margin: 0 auto;
@@ -941,7 +942,7 @@
 							width: 58px;
 							height: 27px;
 							margin-right: 5px;
-							background: #EDEDED url("/img/bang.png") -1px -2px no-repeat;
+							background-position	: -56px -9px;
 							cursor: pointer;
 						}
 
