--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -492,7 +492,7 @@
 							height: 45px;
 							em {
 								display: block;
-								margin-bottom: 5px;
+								margin-bottom: 3px;
 								color: #fff;
 								font-size: 12px;
 								line-height: 12px;
@@ -502,7 +502,7 @@
 								display: block;
 								color: #fff;
 								font-size: 12px;
-								line-height: 12px;
+								line-height: 16px;
 								text-overflow: ellipsis;
 								white-space: nowrap;
 							}
@@ -603,6 +603,7 @@
 			color: #4A4A4A;
 			font-size: 20px;
 			line-height: 20px;
+			/*font-weight: bold;*/
 		}
 		.channel-style {
 			float: right;
@@ -809,6 +810,7 @@
 						em {
 							float: left;
 							font-size: 20px;
+							line-height: 20px;
 							color: #000;
 						}
 					}
@@ -916,9 +918,10 @@
 						.fold-bang-icon {
 							float: left;
 							width: 58px;
-							height: 27px;
+							height: 30px;
 							margin-right: 5px;
-							background-position	: -56px -9px;
+							background-color: #EDEDED;
+							background-position	: -56px -7px;
 							cursor: pointer;
 						}
 
