--- a/public/src/less/trend.less
+++ b/public/src/less/trend.less
@@ -220,7 +220,7 @@
 				}
 				em {
 					float: left;
-					width: 37px;
+					/*width: 37px;*/
 					height: 30px;
 					color: #5C5A43;
 					font-size: 12px;
