--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -810,6 +810,9 @@ float: left;
 
 						
 							.comment {
+							    -ms-user-select: none;
+						        -moz-user-select: none;
+						        -webkit-user-select: none;
 								margin-left: 10px;
 								.comment-icon {
 								    vertical-align: sub;
