--- a/public/src/app/templates/channel/ChannelView.html
+++ b/public/src/app/templates/channel/ChannelView.html
@@ -1,7 +1,6 @@
 <div class="channel-contain">
 	<div class="channel-header clearfix">
 		<div id="channelNav" class="channel-nav clearfix" >
-
 		</div>
 		<div href="/#askflows" class="header-nav present-nav activitHide"  data-type="ask"><img src="http://7u2spr.com1.z0.glb.clouddn.com/20151221-1501515677a3df9af43.png" alt=""><span>随意求P</span></div>
 		<div href="/#askflows" class="header-nav present-nav activitHide" data-type="reply"><img src="http://7u2spr.com1.z0.glb.clouddn.com/20151221-14341856779d6a0ee90.png" alt=""><span>最新作品</span></div>
@@ -15,7 +14,6 @@
 			<div id="activityIntro"></div>				
 		</div>
 	</div>
-	<div id="askflowsShow"></div>
 	<div class="demand-p hide">
 		<div class="demand-header clearfix">
 			<span>求P区</span>
@@ -29,6 +27,9 @@
 
 	<div class="channel-works clearfix">
 		<!-- 频道 -->
+		<div class="channel-all-ask clearfix hide">
+			<h3>全部求P</h3>
+		</div>
 		<div class="channel-ask clearfix hide">
 			<h3>求P区</h3>
 		</div>
@@ -50,6 +51,7 @@
 		</div>
 		<div id="channelWorksPic" class="channel-reply-pic channel-reply-fold"></div>
 	</div>	
+	<div id="askflowsShow"></div>
 
 
 </div>
