--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -586,7 +586,7 @@ float: left;
 	}
 	.channel-works {
 		width: 1180px;
-		.channel-reply , .channel-ask {
+		.channel-reply , .channel-ask, .channel-all-ask {
 			margin-bottom: 20px;
 		}
 		.width-hide {	
