--- a/public/src/app/templates/channel/ChannelView.html
+++ b/public/src/app/templates/channel/ChannelView.html
@@ -8,7 +8,7 @@
 	</div>
 	<div class="channel-big-pic hide">
 		<a href="" class="attr-href">
-			<img src="/img/channelPic.png" alt="">
+			<img src="/img/channelPic.png" alt="" class="channel-big-img">
 		</a>
 
 		<div class="channel-fix hide">
