--- a/public/src/app/templates/channel/ChannelFoldView.html
+++ b/public/src/app/templates/channel/ChannelFoldView.html
@@ -11,20 +11,18 @@
 	</div>
 
 	<div class="fold-pic-contain clearfix">
-		<div class="channel-artwork">
+		<div class="channel-artwork ">
 			<a target="_blank" href="#homepage/reply/<%= uid %>" class="artwork-header clearfix">
 				<span>
 					<img src="<%= avatar %>" alt="头像">
 				</span>
 				<em><%= nickname %></em>
 			</a>
-			<div class="artwork-contain  center-loading-image-container">
-				<span class="center-loading">
-					<a target="_blank" href="#askdetail/ask/<%= ask_id %>" >
-						<img src="<%= image_url %>" data-type="1" alt="原图">
-						<i class="artwork-icon bg-sprite-new"></i>
-					</a>
-				</span>
+			<div class="artwork-contain center-loading-image-container">
+				<a class="center-loading" target="_blank" href="#askdetail/ask/<%= ask_id %>">
+					<img src="<%= image_url %>" data-type="1" alt="原图">
+					<i class="artwork-icon bg-sprite-new"></i>
+				</a>
 			</div>
 			<p><%= desc %></p> 
 			<div class="fold-function clearfix">
@@ -38,14 +36,14 @@
 		</div>
 		<!-- 作品 -->
 		<div class="channel-works">
-		<!-- <div class="arrow-right bg-sprite-new"></div>
-		<div class="arrow-left bg-sprite-new"></div> 
-		<a class="view-details" href="#replydetailplay/<%= ask_id %>/<%= id %>">
-				查看详情
-		</a> --> 
+<!-- 		<div class="arrow-right bg-sprite-new"></div>
+		<div class="arrow-left bg-sprite-new"></div>  -->
 			
 			<div class="long-pic clearfix">
-				<% _.each(replies, function(reply) {  %>  
+				<% var i = 0; var picWidth = 0; var pan = true; _.each(replies, function(reply, i) {  i++%>  
+				 <% picWidth += parseInt(reply.image_width * 238 / reply.image_height); if(picWidth > 980 && pan) { pan = false %>
+				<a class="view-details" href="#replydetailplay/<%= reply.uid %>/<%= reply.id %>" target="_blank">查看更多</a> 
+				<% } %>
 				<div class="channel-works-contain">
 					<a target="_blank" href="#homepage/reply/<%= reply.uid %>" class="works-header" >
 						<span>
