add channelflod category_id

--- a/public/src/app/templates/channel/ChannelFoldView.html
+++ b/public/src/app/templates/channel/ChannelFoldView.html
@@ -34,7 +34,7 @@
 					<i class="comments-icon bg-sprite-new"></i>
 					<span><%= comment_count %></span>
 				</div>
-				<div class="fold-bang-icon download bg-sprite-rebirth" data-type="<%= type %>" data-id="<%= id %>">
+				<div class="fold-bang-icon download bg-sprite-rebirth" data-type="<%= type %>" data-id="<%= id %>" category-id="<%= $(".bgc-change").attr("data-id") %>">
 				</div>
 			</div>
 		</div>
