--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -13,18 +13,22 @@
 		overflow: hidden;
 		width: 1180px;
 		height: 80px;
-		margin: 0 auto;
-		margin-bottom: 45px;
+		margin-right: -20px;
+		margin-bottom: 20px;
 		text-align: center;
+		.channel-header-nav {
+			width: 1200px;
+		}
 		.channel-nav {
-			display: inline-block;
+			float: left;
 		}
 			.header-nav {
+
 				position: relative;
 				float: left;
 				width: 180px;
 				height: 80px;	
-				margin-right: 16px;
+				margin-right: 20px;
 				border-radius: 3px;
 				cursor: pointer;
 				img {
@@ -62,16 +66,16 @@
 	.channel-big-pic-one {
 		overflow: hidden;
     	display: block;
-      	height: 260px;
+      	height: 230px;
     	margin: 0 auto;
       	span {
       		display: block;
       		overflow: hidden;
-      		height: 260px;
+      		height: 230px;
       	}
 		.channel-big-img {  
 			display: block;
-			height: 260px;
+			height: 230px;
     		margin: 0 auto;
 		}
 		.channel-fix {
@@ -522,8 +526,8 @@
 			    	top: 0;
 			    	left: 0;
 			    	width: 80%;
-			    	height: 80%;
-			    	padding: 10%;
+			    	height: 70%;
+			    	padding: 20% 10% 10%;
 			    	background: rgba(250, 250, 0, 0.9);
 			    	.demmand-top {
 						.position-left {
@@ -582,6 +586,7 @@
 						height: 45px;
 						padding-left: 8px;
 						margin-right: 5px;
+    					background: url('/img/backShadow.png') 0 0 no-repeat;
 						var {
 							overflow: hidden;
 							float: left;
