--- a/public/src/app/templates/channel/ChannelView.html
+++ b/public/src/app/templates/channel/ChannelView.html
@@ -1,9 +1,11 @@
 <div class="channel-contain">
 	<div class="channel-header clearfix">
-		<div id="channelNav" class="channel-nav clearfix" >
+		<div class="channel-header-nav clearfix">
+			<div href="/#askflows" class="header-nav present-nav activitHide"  data-type="ask"><img src="http://7u2spr.com1.z0.glb.clouddn.com/20151221-1501515677a3df9af43.png" alt=""><span>随意求P</span></div>
+			<div href="/#askflows" class="header-nav present-nav activitHide" data-type="reply"><img src="http://7u2spr.com1.z0.glb.clouddn.com/20151221-14341856779d6a0ee90.png" alt=""><span>最新作品</span></div>
+			<div id="channelNav" class="channel-nav clearfix" >
+			</div>
 		</div>
-		<div href="/#askflows" class="header-nav present-nav activitHide"  data-type="ask"><img src="http://7u2spr.com1.z0.glb.clouddn.com/20151221-1501515677a3df9af43.png" alt=""><span>随意求P</span></div>
-		<div href="/#askflows" class="header-nav present-nav activitHide" data-type="reply"><img src="http://7u2spr.com1.z0.glb.clouddn.com/20151221-14341856779d6a0ee90.png" alt=""><span>最新作品</span></div>
 	</div>
 	<div class="channel-big-pic hide">
 		<a href="" class="attr-href">
