--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -535,7 +535,7 @@
 							overflow: hidden;
 							width: 20px;
 							height: 20px;
-							margin-right: 15px;
+							margin-right: 10px;
 							border-radius: 50%;
 							.demmand-pic {
 								display: block;
@@ -547,12 +547,15 @@
 							float: left;
 							width: 105px;
 							em {
+								overflow: hidden;
 								display: block;
 								height: 14px;
 								margin-bottom: 5px;
 								font-size: 12px;
 								color: #000;
 								line-height: 14px;
+								text-overflow: ellipsis;
+								white-space: nowrap;
 							}
 							i {
 								display: block;
