--- a/public/src/app/templates/channel/ChannelView.html
+++ b/public/src/app/templates/channel/ChannelView.html
@@ -49,7 +49,9 @@
 			<!-- <em>|</em>	 -->
 			<!-- <span id="new-reply">最新作品</span> -->
 		</div>
-		<div id="channelWorksPic" class="channel-reply-pic channel-reply-fold"></div>
+		<div id="channelWorksPic" class="channel-reply-pic channel-reply-fold">
+			
+		</div>
 	</div>	
 	<div id="askflowsShow"></div>
 
