--- a/public/src/less/homepage.less
+++ b/public/src/less/homepage.less
@@ -174,6 +174,9 @@
         .home-cantainer {
             width: 900px;
             margin-right: -30px;
+            .ReplyMinHeight {
+                min-height: 450px;
+            }
 
             .hot-section {  
                 width: 276px;
