--- a/public/src/app/templates/channel/ChannelView.html
+++ b/public/src/app/templates/channel/ChannelView.html
@@ -5,7 +5,10 @@
 			<div href="/#askflows" class="header-nav present-nav activitHide" data-type="reply"><img src="http://7u2spr.com1.z0.glb.clouddn.com/20151221-14341856779d6a0ee90.png" alt=""><span>最新作品</span></div>
 			<div id="channelNav" class="channel-nav clearfix" >
 			</div>
+
 		</div>
+		<div class="channel-nav-left bg-sprite-rebirth"></div>
+		<div class="channel-nav-right bg-sprite-rebirth"></div>
 	</div>
 	<div class="channel-big-pic hide">
 		<a href="" class="attr-href">
