--- a/public/src/app/templates/channel/ChannelView.html
+++ b/public/src/app/templates/channel/ChannelView.html
@@ -7,8 +7,8 @@
 			</div>
 
 		</div>
-		<div class="channel-nav-left bg-sprite-rebirth"></div>
-		<div class="channel-nav-right bg-sprite-rebirth"></div>
+		<div class="channel-nav-left bg-sprite-rebirth blo"></div>
+		<div class="channel-nav-right bg-sprite-rebirth blo"></div>
 	</div>
 	<div class="channel-big-pic hide">
 		<a href="" class="attr-href">
