--- a/public/src/app/templates/message/MessageView.html
+++ b/public/src/app/templates/message/MessageView.html
@@ -12,10 +12,10 @@
 			<span class="paste">帖子回复</span>
 		</div>
 
-		<div class="nav praise-nav <%= (type=='praise')? 'nav-pressed':'' %>" data="praise">
+<!-- 		<div class="nav praise-nav <%= (type=='praise')? 'nav-pressed':'' %>" data="praise">
 			<i class="praise-icon praise-icon-pressed bg-sprite-new"></i>
 			<span class="praise">赞</span>
-		</div>
+		</div> -->
 		
 		<div class="nav attenion-nav <%= (type=='follow')? 'nav-pressed':'' %>" data="follow">
 			<i class="attention-icon attention-icon-pressed bg-sprite-new"></i>
