--- a/public/src/less/message.less
+++ b/public/src/less/message.less
@@ -198,7 +198,7 @@
 			height: 50px;
 			margin-right: 26px;
 			border-radius: 50%;
-			a {
+			.praise-head-pic {
 				display: block;
 				width: 50px;
 				height: 50px;
