--- a/public/src/app/templates/index/IndexBannerView.html
+++ b/public/src/app/templates/index/IndexBannerView.html
@@ -8,3 +8,13 @@
 		</span>	
 	</a>
 </span>	
+<span class="recomment-section"  >
+	<a target="_blank" href="<%= pc_url %>">
+		<span class="is-loading">
+            <img src="<%= large_pic %>" alt="">
+            <!--
+            <em class="banner-written"><%= desc %></em>
+            -->
+		</span>	
+	</a>
+</span>	
