--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -1122,6 +1122,23 @@
 							color: #000;
 						}
 					}
+					.fold-more {
+						float: right;
+						margin-left: 20px;
+						em {
+							float: left;
+							margin-right: 3px;
+							font-size: 12px;
+							color: 000;
+							line-height: 20px;
+						}
+						.fold-more-icon {
+						    float: left;
+						    width: 8px;
+						    height: 20px;
+						    background-position: -108px -496px;
+						}
+					}
 					.fold-time {
 						float: right;
 						height: 20px;
@@ -1249,6 +1266,7 @@
 					}*/
 					.view-details {
 						display: block;
+						display: none;
 						position: absolute;
 						top: 32px;
 						right: 0;
