--- a/public/src/app/templates/index/IndexItemView.html
+++ b/public/src/app/templates/index/IndexItemView.html
@@ -25,6 +25,7 @@
 		</a>
 		<span class="hot-name">
 			<%= nickname %>
+			<!-- <i class="bg-sprite-rebirth small-v-icon"></i> -->
 		</span>
 		<span class="hot-item-actionbar">
 			<span class="browse">
