--- a/public/src/app/templates/channel/ChannelFoldView.html
+++ b/public/src/app/templates/channel/ChannelFoldView.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<!-- 作品 -->
-		<div class="channel-works">
+		<div class="channel-works" time="null">
 <!-- 		<div class="arrow-left bg-sprite-rebirth"></div> 
 		<div class="arrow-right bg-sprite-rebirth"></div> -->
 			
@@ -57,7 +57,7 @@
 				<% } %>
 				<div class="channel-works-contain">
 					<a target="_blank" href="#homepage/reply/<%= reply.uid %>" class="works-header" >
-						<span>
+						<span class="channel-works-head">
 							<img src="<%= reply.avatar %>" alt="头像">
 						</span>
 						<em><%= reply.nickname %></em>  
