--- a/public/src/less/index.less
+++ b/public/src/less/index.less
@@ -1,6 +1,7 @@
 /*
 * icon styles
 */
+
 .icon-weibo {  
     display: inline-block;
     width: 20px;
@@ -469,11 +470,21 @@
                 }
             }
             .hot-name {
+                position: relative;
                 color: #000;
                 font-size: 12px;
                 display: inline-block;
-                 margin-left: 10px;
-                 vertical-align: super;
+                margin-left: 10px;
+                vertical-align: super;
+                .small-v-icon {
+                    position: absolute;
+                    right: -16px;
+                    bottom: 4px;
+                    display: block;
+                    width: 12px;
+                    height: 12px;
+                    background-position: -258px -68px;
+                }
             }
             .hot-item-actionbar {
                 float: right;
