--- a/public/src/less/trend.less
+++ b/public/src/less/trend.less
@@ -99,7 +99,7 @@
 						display: block;
 						width: 100%;
 					}
-					.old-icon, .reply-icon {
+					.reply-icon {
 						position: absolute;
 						display: block;
 						top: 5px;
@@ -108,6 +108,16 @@
 						height: 18px;
 						background-position: -236px -6px;
 					}
+					.old-icon {
+						position: absolute;
+						display: block;
+						left: 0;
+						top: 5px;
+						width: 34px;
+						height: 18px;
+						background-position: -236px -36px;
+
+					}
 				}
 			}
 			.old-pic {
@@ -115,7 +125,7 @@
 				left: 195px;
 				bottom: 20px;
 				width: 374px;
-						background-position: -236px -6px;
+				background-position: -236px -6px;
 
 				a {
 					position: relative;
