--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -270,6 +270,10 @@
 						position: absolute;
 						left: 0;
 						top: 0;
+						width: 100%;
+						img {
+							vertical-align: middle;
+						}
 					}
 				}
 				.reply-footer {
@@ -1251,6 +1255,7 @@
 
 				.channel-works {
 					position: relative;
+					z-index: 99999;
 					overflow: hidden;
 					width: 980px;
 					margin-bottom: 20px;
@@ -1311,7 +1316,7 @@
 								display: block;
 								height: 22px;
 								margin-bottom: 10px;
-								span {
+								.channel-works-head {
 									float: left;
 									overflow: hidden;	
 									width: 22px;
@@ -1350,7 +1355,8 @@
 									width: 58px;
 									height: 30px;
 									.reply-like {
-										width: 43px;
+										width: 58px;
+										text-align: center;
 									}
 								}
 								.fold-comments {
@@ -1362,18 +1368,19 @@
 									background-color: #EDEDED;
 									border-radius: 3px;
 									cursor: pointer;
+									text-align: center;
+									line-height: 30px;
 									.comments-icon {
-										float: left;
-										width: 28px;
-										height: 27px;
-										background-position: -164px -362px;; 
+										display: inline-block;
+										width: 15px;
+										height: 21px;
+										margin-right: 5px;
+										background-position: -170px -362px;; 
 									}
 									span {
-										float: left;
-										height: 27px;
+										display: inline-block;
 										font-size: 12px;
 										color: #A2A2A2;
-										line-height: 31px;
 									}
 								}
 								.fold-praise {
