--- a/public/src/app/templates/channel/ChannelFoldView.html
+++ b/public/src/app/templates/channel/ChannelFoldView.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<!-- 作品 -->
-		<div class="channel-works" time="null">
+		<div class="channel-works-right" foldTime="null" speed="null">
 <!-- 		<div class="arrow-left bg-sprite-rebirth"></div> 
 		<div class="arrow-right bg-sprite-rebirth"></div> -->
 			
