--- a/public/src/less/channel.less
+++ b/public/src/less/channel.less
@@ -16,7 +16,12 @@
 		.channel-bottom {
 			margin-bottom: 20px;
 			.channel-title {
-				font-size: 20px;
+				height: 16px;
+				padding-left: 12px;
+				border-left: 5px solid #313131;
+				font-size: 16px;
+				line-height: 16px;
+				color: #000;
 			}
 		}
 	}
@@ -668,10 +673,11 @@
 			margin-bottom: 15px;
 			span {
 				float: left;
-				height: 20px;
-				color: #4A4A4A;
-				font-size: 20px;
-				line-height: 20px;
+				height: 16px;
+				padding-left: 12px;
+				border-left: 5px solid #313131;
+				font-size: 16px;
+				line-height: 16px;
 			}
 			#check_more {
 				float: right;
@@ -907,10 +913,12 @@
 
 		h3 {
 			float: left;
-			height: 20px;
-			color: #4A4A4A;
-			font-size: 20px;
-			line-height: 20px;
+			height: 16px;
+			padding-left: 12px;
+			border-left: 5px solid #313131;
+			color: #000;
+			font-size: 16px;
+			line-height: 16px;
 			/*font-weight: bold;*/
 		}
 		.channel-style {
@@ -1253,7 +1261,7 @@
 					}
 				}
 
-				.channel-works {
+				.channel-works-right {
 					position: relative;
 					z-index: 99999;
 					overflow: hidden;
@@ -1300,6 +1308,7 @@
 							float: left;
 							margin-right: 20px;
 							margin-bottom: 20px;
+							margin-left: 0;
 
 							.reply-desc {
 								margin-bottom: 15px;
