--- a/public/src/less/replydetailplay.less
+++ b/public/src/less/replydetailplay.less
@@ -203,22 +203,40 @@
 						}
 					.personal-user {
 						margin-bottom: 20px;
-						a {
+						.personal-user {
 							display: block;
 							height: 50px;
-							var {
-								overflow: hidden;
+							.avatar-header {
+								position: relative;
 								float: left;
 								width: 50px;
 								height: 50px;
 								margin-right: 10px;
-								border-radius: 50%;
+								var {
+									overflow: hidden;
+									display: block;
+									width: 50px;
+									height: 50px;
+									-ms-border-radius: 50%;
+									-mos-border-radius: 50%;
+									-webkit-border-radius: 50%;
+									border-radius: 50%;
+								}
 								img {
 									display: block;
 									width: 100%;
 								}
+								.middle-v-icon {
+									position: absolute;
+									right: 0;
+									bottom: 0;
+									display: block;
+									width: 16px;
+									height: 16px;
+									background-position: -228px -66px;
+								}
 							}
-							span {
+							.personal-name {
 								overflow: hidden;
 								float: left;
 								width: 270px;
@@ -413,9 +431,26 @@
 								.reply-name {
 									float: left;
 									font-size: 14px;
-									color: #878787;
 									line-height: 18px;
+									var {
+		                                float: left;
+		                                overflow: hidden;
+		                                max-width: 70px;
+		                                margin-right: 5px;
+		                                font-size: 14px;
+										color: #878787;
+		                                text-overflow: ellipsis;
+		                                white-space: nowrap;
+		                            }   
+		                            .small-v-icon {
+		                                float: left;
+		                                width: 12px;
+		                                height: 12px;
+		                                margin-top: 3px;
+		                                background-position: -258px -68px;
+		                            }
 								}
+
 								.reply-time {
 									float: right;
 									font-size: 12px;
@@ -450,7 +485,7 @@
 									color: #9B9B9B;
 									line-height: 18px;
 								}
-								var {
+								.comment-p {
 									display: block;
 									text-indent: 10px;
 									margin: 13px 0 8px 0;
