--- a/public/src/less/trend.less
+++ b/public/src/less/trend.less
@@ -8,15 +8,30 @@
 			a {
 				float: left;
 				width: 80px;
-				img {
+				.avatar-header {
+					position: relative;
+					overflow: hidden;
 					display: block;
 					width: 50px;
 					height: 50px;
 					margin: 0 auto 10px;
-					-ms-border-radius: 50%;
-					-mos-border-radius: 50%;
-					-webkit-border-radius: 50%;
-					border-radius: 50%;
+					img {
+						display: block;
+						width: 100%;
+						-ms-border-radius: 50%;
+						-mos-border-radius: 50%;
+						-webkit-border-radius: 50%;
+						border-radius: 50%;
+					}
+					.middle-v-icon {
+						position: absolute;
+						right: 0;
+						bottom: 0;
+						display: block;
+						width: 16px;
+						height: 16px;
+						background-position: -228px -66px;
+					}
 				}
 				span {
 					display: block;
@@ -126,7 +141,6 @@
 				bottom: 20px;
 				width: 374px;
 				background-position: -236px -6px;
-
 				a {
 					position: relative;
 					float: left;
@@ -144,7 +158,6 @@
 						width: 34px;
 						height: 18px;
 						background-position: -236px -36px;
-
 					}
 				}
 			}
