--- a/public/src/app/templates/channel/ChannelDemandView.html
+++ b/public/src/app/templates/channel/ChannelDemandView.html
@@ -10,11 +10,16 @@
 	    </span>
 	</div>
     <a class="demmand-contain-position" href="#homepage/reply/<%= uid %>" target="_blank">
-    	<var>
+    	<var class="demmand-contain-position-pic">
     		<img src="<%= avatar %>" alt="">
     	</var>
     	<span class="demmand-position-right">
-    		<em><%= nickname %></em>
+    		<em class="demmand-position-name clearfix">
+                <var><%= nickname %></var>
+                <% if (isstar) { %>
+                    <i class="bg-sprite-rebirth small-v-icon"></i>
+                <% } %>
+            </em>
     		<i><%= desc %></i>
     	</span>
     </a>
@@ -24,7 +29,12 @@
     			<img src="<%= avatar %>" alt="" class="demmand-pic">
     		</span>
     		<span class="position-right">
-    			<em><%= nickname %></em>
+		         <em class="demmand-position-name clearfix">
+                    <var><%= nickname %></var>
+                    <% if (isstar) { %>
+                        <i class="bg-sprite-rebirth small-v-icon"></i>
+                    <% } %>
+                </em>
     			<i><%= desc %></i>
     		</span>
     	</a>
