--- a/public/src/app/templates/homepage/HomeFansView.html
+++ b/public/src/app/templates/homepage/HomeFansView.html
@@ -1,7 +1,10 @@
 <div class="friendship-main clearfix">
     <div class="friendship-avatar">
-        <a target="_blank" href="#homepage/reply/<%= uid %>">
+        <a target="_blank" href="#homepage/reply/<%= uid %>" class="avatar-header">
             <img src="<%= avatar %>" alt="">
+                <i class="bg-sprite-rebirth middle-v-icon"></i>
+            <% if (isstar) { %>
+            <% } %>
         </a>
     </div>
     <div class="friendship-section-right">
