--- a/public/src/app/templates/index/IndexItemView.html
+++ b/public/src/app/templates/index/IndexItemView.html
@@ -17,15 +17,17 @@
             </span>
         </span>
 	</a>
-	<div class="hot-footer">
-		<a  target="_blank" href="#homepage/reply/<%= uid %>">
+	<div class="hot-footer clearfix">
+		<a  target="_blank" href="#homepage/reply/<%= uid %>" class="footer-header">
 			<span class="header-portrait">
 				<img src="<%= avatar %>" alt="">
 			</span>
 		</a>
 		<span class="hot-name">
-			<%= nickname %>
-			<!-- <i class="bg-sprite-rebirth small-v-icon"></i> -->
+			<var class="foot-write"><%= nickname %></var>
+			<% if (isstar) { %>
+				<i class="bg-sprite-rebirth small-v-icon"></i>
+			<% } %>
 		</span>
 		<span class="hot-item-actionbar">
 			<span class="browse">
@@ -43,3 +45,4 @@
 		</span>
 	</div>
 </div>
+
