--- a/public/src/app/templates/trend/TrendView.html
+++ b/public/src/app/templates/trend/TrendView.html
@@ -3,8 +3,15 @@
 
 		<div class="dynamics-person">
 			<a target="_blank" href="#homepage/reply/<%= uid %>">
-				<img src="<%= avatar %>" alt="<%= avatar %>">
-				<span class="name"><%= nickname %></span>
+				<span class="avatar-header">
+					<img src="<%= avatar %>" alt="<%= avatar %>">
+	                <% if (isstar) { %>
+                		<i class="bg-sprite-rebirth middle-v-icon"></i>
+                	<% } %>
+				</span>
+				<span class="name reply-name-v">
+					<var><%= nickname %></var>
+				</span>
 			</a>
 		</div>
 		<div class="dynamics-right-content">
@@ -39,7 +46,7 @@
 					<div class="old-pic clearfix">
 						<% _.each(ask_uploads, function(ask_upload){ %>
 						<a target="_blank" href="#askdetail/ask/<%= ask_id %>">
-							<img src="<%= ask_uploads[0].image_url %>" alt="">
+							<img src="<%= ask_upload.image_url %>" alt="">
 							<span class="old-icon bg-sprite-rebirth"></span>
 						</a>
 						<% }) %>
@@ -50,7 +57,7 @@
 						<% _.each(ask_uploads, function(ask_upload){ %>
 						<a target="_blank" href="#askdetail/ask/<%= ask_id %>">
 							<% if(ask_upload.image_url) { %>
-								<img src="<%= ask_uploads[0].image_url %>" alt="">
+								<img src="<%= ask_upload.image_url %>" alt="">
 								<span class="old-icon bg-sprite-rebirth"></span>
 							<%  } %>	
 						</a>
