--- a/public/src/less/common.less
+++ b/public/src/less/common.less
@@ -923,6 +923,23 @@ width: 1280px;
                             display: inline-block;
                             vertical-align: top;
                             margin-left: 13px;
+                            var {
+                                float: left;
+                                overflow: hidden;
+                                max-width: 90px;
+                                margin-right: 5px;
+                                color: #000;
+                                font-size: 14px;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;
+                            }
+                            .small-v-icon {
+                                float: left;
+                                width: 12px;
+                                height: 12px;
+                                margin-top: 18px;
+                                background-position: -258px -68px;
+                            }
                         }
                     }
                 }
