--- a/public/src/less/homepage.less
+++ b/public/src/less/homepage.less
@@ -18,18 +18,29 @@
 		.home-avater {
 		    width: 80px; 
 		    height: 80px;
-		    -moz-border-radius: 50%;
-		    -webkit-border-radius: 50%;
-		    border-radius: 50%;
-		    border: 1px solid #D3D3D3;
-		    overflow: hidden;
 		    position: relative;
 		    margin: 0 auto;
-		    img {
+		    .avatar-header {
+                overflow: hidden;
+                display: block;
+                position: relative;
 				width: 100%;
-			    -moz-border-radius: 50%;
-			    -webkit-border-radius: 50%;
-			    border-radius: 50%;
+                img {
+                    display: block;
+                    width: 100%;
+    			    -moz-border-radius: 50%;
+    			    -webkit-border-radius: 50%;
+    			    border-radius: 50%;
+                }
+                .big-v-icon {
+                    display: block;
+                    position: absolute;
+                    right: 0;
+                    bottom: 0;
+                    width: 20px;
+                    height: 20px;
+                    background-position: -194px -66px;
+                }
 		    }
 		}
 		.home-name {
@@ -738,15 +749,25 @@
             width: 50px;
             height: 50px;
             margin-right: 20px;
-            a {
+            .avatar-header {
+                position: relative;
                 overflow: hidden;
                 display: block;
                 width: 50px;
                 height: 50px;
-                border-radius: 50%;
                 img {
                     display: block;
                     width: 100%;
+                    border-radius: 50%;
+                }
+                .middle-v-icon {
+                    position: absolute;
+                    right: 0;
+                    bottom: 0;
+                    display: block;
+                    width: 16px;
+                    height: 16px;
+                    background-position: -228px -66px;
                 }
             }
         }
@@ -810,15 +831,20 @@
     margin-right: 0px;
 }
 .liked-image {
+    float: left;
     width: 200px;
     height: 200px;
-    display: inline-block;
     margin-right: 31px;
     margin-bottom: 30px;
     overflow: hidden;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
 
     img {
+        display: block;
         width: 100%;
-        display: flex;
     }
 }
